--- a/styles/blueprint.scss
+++ b/styles/blueprint.scss
@@ -4,7 +4,7 @@
   $black  : lighten(#000, 40);
 
   $get    : $blue;
-  $delete : $delete;
+  $delete : $red;
   $put    : #f39c12;
   $post   : $green;
 
