Added edit button

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
   </li>
 </ul>
 
+<a class="button small outline"><i data-icon="&#xe05f;"></i> Edit</a>
+
 <div ng-hide="hasBlueprints">
   <p>You don't have any blueprints yet.</p>
 </div>
